--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h2>Contact Us</h2>
     <p>If you need help or have questions, you can reach out to us:</p>
     <ul>
-        <li>Email: <a href="mailto:galistinos@me.com">galistinos@me.com</a></li>
-        <li>Phone: +1 (203) 885-6182</li>
+        <li>Email: <a href="mailto:support@medtrackapp.com">support@medtrackapp.com</a></li>
+        <li>Phone: +1 (555) 123-4567</li>
     </ul>
 
     <h2>Frequently Asked Questions (FAQs)</h2>
@@ -29,6 +29,7 @@
     <h3>What should I do if the app crashes?</h3>
     <p>Try restarting the app. If the issue persists, contact support.</p>
 
-    <p>For further assistance, please contact our support team at the email  or phone number provided above.</p>
+    <p>For further assistance, please contact our support team at the email or phone number provided above.</p>
 </body>
 </html>
+
